# desafio-objective-jogo-gourmet

./: .gitignore  README.md  game.py  handlers.py  main.py  node.py  pyproject.toml
tests/: test_define_sides_nodes.py  test_desafio_objective_jogo_gourmet.py  test_down_node.py  test_handlers.py  test_middle_node.py  test_node.py
