[tool.poetry]
name = "desafio-objective-jogo-gourmet"
version = "0.1.0"
description = ""
authors = ["Elicácio C. de Farias <elicaciocardoso@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
isort = "^5.8.0"
black = "^21.6b0"
flake8 = "^3.9.2"
rope = "^0.19.0"
pytest-mock = "^3.6.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
[tool.black]
line-length = 88